enhace: removing some pseudoclasses

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="lab-card">Card 4</div>
                 <div class="lab-card">Card 5</div>
                 <div class="lab-card">Card 6</div>
-                <div class="lab-card">Card 7</div>
+                <div class="lab-card"></div>
                 <div class="lab-card">Card 8</div>
                 <div class="lab-card">Card 9</div>
                 <div class="lab-card">Card 10</div>
