enhace: adding 5 more elements

--- a/index-content.html
+++ b/index-content.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -30,11 +29,11 @@
     <div class="content">
       <section class="grid">
         <div class="banner box1">
-            <h2>¡Bienvenido a Programación Orientada a la Web!</h2>
-            <p>Panel de administrador</p>
+            <!-- <h2>¡Bienvenido a Programación Orientada a la Web!</h2>
+            <p>Panel de administrador</p> -->
         </div>
         <div class="box box2">
-            <h2 class="card-title">Mi perfil</h2>
+            <!-- <h2 class="card-title">Mi perfil</h2>
             <form class="form-demo" autocomplete="off">
               <label>
                 Nombre
@@ -62,11 +61,11 @@
               </label>
               <button type="submit">Enviar</button>
               <button disabled type="submit">Reiniciar</button>
-            </form>
+            </form> -->
           </div>
           
         <div class="box box3 stat-card">
-           <div class="stat-info">
+           <!-- <div class="stat-info">
              <div class="stat-label">Usuarios</div>
              <div class="stat-value">1,234</div>
            </div>
@@ -75,10 +74,10 @@
                <path stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                  d="M17 20v-2a4 4 0 0 0-4-4H7a4 4 0 0 0-4 4v2M15 7a4 4 0 1 1-8 0 4 4 0 0 1 8 0ZM23 20v-2a4 4 0 0 0-3-3.87M16 3.13a4 4 0 0 1 0 7.75" />
              </svg>
-           </div>
+           </div> -->
          </div> 
          <div class="box box4 stat-card">
-            <div class="stat-info">
+            <!-- <div class="stat-info">
               <div class="stat-label">Ventas</div>
               <div class="stat-value">$45,678</div>
             </div>
@@ -87,10 +86,10 @@
                 <circle cx="12" cy="12" r="10" fill="#bbf7d0"/>
                 <path d="M12 6v12M15 9c0-1.5-1.5-3-3-3s-3 1.5-3 3c0 3 6 3 6 6 0 1.5-1.5 3-3 3s-3-1.5-3-3" stroke="#22c55e" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
               </svg>
-            </div>
+            </div> -->
           </div>
           <div class="box box5 stat-card">
-            <div class="stat-info">
+            <!-- <div class="stat-info">
               <div class="stat-label">Pedidos</div>
               <div class="stat-value">892</div>
             </div>
@@ -99,10 +98,10 @@
                 <path stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                   d="M16 10V8a4 4 0 1 0-8 0v2m10 0H6a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-6a2 2 0 0 0-2-2Z" />
               </svg>
-            </div>
+            </div> -->
           </div>
         <div class="box box6 ">
-            <h2 class="card-title">Practicando Flexbox</h2>
+            <!-- <h2 class="card-title">Practicando Flexbox</h2>
             <div class="lab-cards">
                 <div class="lab-card">Card 1</div>
                 <div class="lab-card">Card 2</div>
@@ -114,12 +113,7 @@
                 <div class="lab-card">Card 8</div>
                 <div class="lab-card">Card 9</div>
                 <div class="lab-card">Card 10</div>
-                <div class="lab-card">Card 11</div>
-                <div class="lab-card">Card 12</div>
-                <div class="lab-card">Card 13</div>
-                <div class="lab-card">Card 14</div>
-                <div class="lab-card">Card 15</div>
-            </div>
+            </div> -->
           </div>
       </section>
     </div>
